--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0'
-
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.0-beta-1038'
+        //classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.0.0-beta-1038"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
